<resources>
    <string name="app_name">Kaffeehaus</string>
    <string name="tagline">Brew, Explore, Enjoy: Your Coffee Adventure Starts Here!</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="option_1_vibe">Fun</string>
    <string name="option_2_vibe">Cool</string>
    <string name="option_3_vibe">Quiet</string>
    <string name="option_4_vibe">Crowd</string>
    <string name="option_2_1_utils">Wifi</string>
    <string name="option_2_2_utils">Electric Socket</string>
    <string name="option_2_3_utils">Place</string>
    <string name="option_2_4_utils">Cheap</string>
    <string name="option_3_1_view">Beautiful</string>
    <string name="option_3_2_view">Relaxing</string>
    <string name="option_3_3_view">Vintage</string>
    <string name="option_3_4_view">Classic</string>
    <string name="txt_view_question">What View do you want ?</string>
    <string name="txt_ambience_question">What Ambience do you want ?</string>
    <string name="txt_utils_question">What Utils do you want ?</string>
</resources>