<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFC26F"
    tools:context=".activity.QuizActivity">


    <TextView
        android:id="@+id/QuizTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="150dp"
        android:fontFamily="@font/plusjakartasans"
        android:text="@string/txt_view_question"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <TextView
        android:id="@+id/tvOption1"
        android:layout_width="80dp"
        android:layout_height="50dp"
        android:layout_marginLeft="-5dp"
        android:layout_marginTop="10dp"
        android:alpha="0"
        android:background="@drawable/chip_item"
        android:fontFamily="@font/plusjakartasans"
        android:gravity="center"
        android:text="Option 1"
        android:textColor="@color/secondary"
        android:layout_marginStart="70dp"
        android:textSize="14sp"
        android:textStyle="normal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/QuizTextView" />

    <TextView
        android:id="@+id/tvOption2"
        android:layout_width="80dp"
        android:layout_height="50dp"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="10dp"
        android:alpha="0"
        android:background="@drawable/chip_item"
        android:fontFamily="@font/plusjakartasans"
        android:gravity="center"
        android:text="Option 2"
        android:textColor="@color/secondary"
        android:textSize="14sp"
        android:textStyle="normal"
        app:layout_constraintLeft_toRightOf="@id/tvOption1"
        app:layout_constraintTop_toBottomOf="@id/QuizTextView" />

    <TextView
        android:id="@+id/tvOption3"
        android:layout_width="80dp"
        android:layout_height="50dp"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="10dp"
        android:alpha="0"
        android:background="@drawable/chip_item"
        android:fontFamily="@font/plusjakartasans"
        android:gravity="center"
        android:text="Option 3"
        android:textColor="@color/secondary"
        android:textSize="14sp"
        android:textStyle="normal"
        app:layout_constraintLeft_toRightOf="@id/tvOption2"
        app:layout_constraintTop_toBottomOf="@id/QuizTextView" />

    <Button
        android:id="@+id/option1"
        style="@style/Widget.Material3.Button"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/option_1_vibe"
        android:textSize="15sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvOption1" />

    <Button
        android:id="@+id/option21"
        style="@style/Widget.Material3.Button"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:alpha="0"
        android:text="@string/option_2_1_utils"
        android:textSize="15sp"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvOption1" />

    <Button
        android:id="@+id/option31"
        style="@style/Widget.Material3.Button"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:alpha="0"
        android:text="@string/option_3_1_view"
        android:textSize="15sp"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvOption1" />

    <Button
        android:id="@+id/option2"
        style="@style/Widget.Material3.Button"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="6dp"
        android:text="@string/option_2_vibe"
        android:textSize="15sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/option1" />

    <Button
        android:id="@+id/option22"
        style="@style/Widget.Material3.Button"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="6dp"
        android:alpha="0"
        android:text="@string/option_2_2_utils"
        android:textSize="15sp"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/option1" />

    <Button
        android:id="@+id/option32"
        style="@style/Widget.Material3.Button"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="6dp"
        android:alpha="0"
        android:text="@string/option_3_2_view"
        android:textSize="15sp"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/option1" />

    <Button
        android:id="@+id/option3"
        style="@style/Widget.Material3.Button"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="6dp"
        android:text="@string/option_3_vibe"
        android:textSize="15sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/option2" />

    <Button
        android:id="@+id/option23"
        style="@style/Widget.Material3.Button"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="6dp"
        android:alpha="0"
        android:text="@string/option_2_3_utils"
        android:textSize="15sp"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/option2" />

    <Button
        android:id="@+id/option33"
        style="@style/Widget.Material3.Button"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="6dp"
        android:alpha="0"
        android:text="@string/option_3_3_view"
        android:textSize="15sp"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/option2" />

    <Button
        android:id="@+id/option4"
        style="@style/Widget.Material3.Button"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="6dp"
        android:text="@string/option_4_vibe"
        android:textSize="15sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/option3" />

    <Button
        android:id="@+id/option24"
        style="@style/Widget.Material3.Button"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="6dp"
        android:alpha="0"
        android:text="@string/option_2_4_utils"
        android:textSize="15sp"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/option3" />

    <Button
        android:id="@+id/option34"
        style="@style/Widget.Material3.Button"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="6dp"
        android:alpha="0"
        android:text="@string/option_3_4_view"
        android:textSize="15sp"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/option3" />

    <Button
        android:id="@+id/btnNext"
        style="@style/Widget.Material3.Button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:text="Submit Preferences"
        android:textSize="15sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/option4" />

</androidx.constraintlayout.widget.ConstraintLayout>